Stop very long package titles wrapping.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -18,8 +18,12 @@
 
 .package {
     h2 {
+        overflow: hidden;
+        max-width: 600px;
         margin: 0;
         padding: 0;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
 
     .package-title {
